# numocr

./: Cargo.toml  README.md
models/catia_crnn_digit_ocr_digits/: metadata.json  model.onnx  model.pt  onnx_cpu_eval.json
packaging/: PACKAGE_README.md  build_installer_exe.ps1  install.ps1  uninstall.ps1
src/: app.rs  lib.rs  main.rs
src/image_proc/: mod.rs  preprocess.rs  roi.rs
src/ocr/: mod.rs  onnx_digit.rs  roi_tesseract_cli.rs  tesseract_cli.rs  tesseract_cmd.rs  types.rs
src/search/: digit_sequence.rs  mod.rs
tools/: generate_catia_2d_dataset.py  generate_digit_dataset.py  prepare_hf_recognition_dataset.py  train_crnn_digit_ocr.py
training_data/catia_2d_digits/: labels.csv  metadata.json  onnx_roi_eval.json  tesseract_current_default_eval.json  tesseract_roi_eval.json
training_data/catia_ocr_recognition/: metadata.json
training_data/catia_ocr_recognition/test/: metadata.csv
training_data/catia_ocr_recognition/train/: metadata.csv
training_data/catia_ocr_recognition/validation/: metadata.csv
training_data/ctis_digits/: charset.txt  labels.csv  metadata.json
training_data/fonts/: README.md
