[package]
name = "digit_ocr_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = "0.29"
egui = "0.29"
image = "0.25"
rfd = "0.15"
tempfile = "3.13"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
